# duality-node

./: Cargo.toml  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
cli/: Cargo.toml  build.rs
cli/src/: cli.rs  command.rs  main.rs
docker/: README.md
docker/ci/: Dockerfile
docker/dev/: Dockerfile  docker-compose.yml  spin.sh
executive/: Cargo.toml  build.rs
executive/src/: lib.rs
executive/src/sparrow/: chain_spec.rs  executive.rs
executive/src/template/: chain_spec.rs  executive.rs  mod.rs
node/: Cargo.toml
node/cli/: Cargo.toml
node/cli/src/: cli.rs  command.rs  lib.rs
node/executive/: Cargo.toml  build.rs
node/executive/src/template/: chain_spec.rs  executive.rs
node/rpc/: Cargo.toml
node/rpc/src/: lib.rs
node/service/: Cargo.toml  build.rs
node/service/src/: client.rs  lib.rs  rpc.rs
node/service/src/chain_spec/: mod.rs  template.rs
node/src/: chain_spec.rs  command.rs  lib.rs  rpc.rs  service.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/executive/: Cargo.toml
runtime/executive/src/template/: chain_spec.rs  executive.rs
runtime/primitives/: Cargo.toml
runtime/primitives/src/: lib.rs
runtime/runtime/: Cargo.toml
runtime/runtime/src/: lib.rs
runtime/runtime/src/template/: mod.rs  template.rs
runtime/sparrow/: Cargo.toml
runtime/sparrow/src/: constants.rs  lib.rs
runtime/src/: lib.rs
runtime/template/: Cargo.toml  build.rs
runtime/template/src/: constants.rs  lib.rs
src/: main.rs
