[package]
name = 'duality-cli'
version = '4.0.0-dev'
description = "A reference implementation for the Duality Network."
authors = ['Duality Blockchain Solutions LLC <https://github.com/dualitynetwork>']
edition = '2021'
publish = false
repository = 'https://github.com/dualitynetwork/duality-node/'
build = 'build.rs'

[[bin]]
name = "duality"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }

[dependencies]
color-eyre = { version = "0.5.11", default-features = false }
duality-service = { path = '../node/service', version = '4.0.0-dev' }
template-runtime = { path = '../runtime/template', version = '4.0.0-dev', optional = true }

jsonrpc-core = '18.0.0'
structopt = '0.3.8'

frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
frame-system-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
pallet-transaction-payment-rpc = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }

sc-basic-authorship = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sc-cli = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1", features = ['wasmtime'] }
sc-client-api = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sc-consensus = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sc-consensus-aura = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sc-executor = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1", features = ['wasmtime'] }
sc-finality-grandpa = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sc-keystore = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sc-rpc = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sc-rpc-api = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sc-service = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1", features = ['wasmtime'] }
sc-telemetry = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sc-transaction-pool = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sc-transaction-pool-api = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }

sp-api = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sp-block-builder = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sp-blockchain = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sp-consensus = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sp-consensus-aura = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sp-core = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sp-finality-grandpa = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sp-runtime = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sp-timestamp = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }

substrate-frame-rpc-system = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }

[features]
cli = []
default = [ "wasmtime", "cli", "with-template-runtime" ]
wasmtime = [ "sc-cli/wasmtime" ]
with-template-runtime = [
    "template-runtime",
    "duality-service/with-template-runtime",
]
runtime-benchmarks = [
    'duality-service/runtime-benchmarks',
]
