[package]
name = 'duality-cli'
version = '4.0.0-dev'
description = "A reference implementation for the Duality Network."
authors = ['Duality Blockchain Solutions LLC <https://github.com/dualitynetwork>']
edition = '2021'
publish = false
repository = 'https://github.com/dualitynetwork/duality-node/'
build = 'build.rs'

[[bin]]
name = "duality"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
cfg_aliases = "0.1.1"
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }

[dependencies]
structopt = '0.3.8'
color-eyre = { version = "0.5.11", default-features = false }

duality-executive = { path = '../executive', version = '4.0.0-dev' }
duality-service = { path = '../node/service', version = '4.0.0-dev' }

frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }

template-runtime = { path = '../runtime/template', version = '4.0.0-dev', optional = true }

sc-cli = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1", features = ['wasmtime'] }
sc-service = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1", features = ['wasmtime'] }

[features]
cli = []
default = [ "wasmtime", "cli", "with-template-runtime" ]
wasmtime = [ "sc-cli/wasmtime" ]
with-template-runtime = [
    "duality-executive/with-template-runtime",
    "duality-service/with-template-runtime",
    "template-runtime",
]
runtime-benchmarks = [
    'duality-service/runtime-benchmarks',
]
