[package]
name = 'duality-executive'
version = '4.0.0-dev'
authors = ['Duality Blockchain Solutions LLC <https://github.com/dualitynetwork>']
edition = '2021'
build = 'build.rs'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
cfg_aliases = "0.1.1"
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }

[dependencies]
cfg-if = "1.0.0"
duality-primitives = { path = "../primitives", version = '4.0.0-dev' }

runtime-template = { path = '../runtime/template', version = '4.0.0-dev', optional= true }

sc-basic-authorship = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sc-client-api = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sc-consensus = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sc-consensus-aura = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sc-service = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1", features = ['wasmtime'] }
sc-executor = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1", features = ['wasmtime'] }
sc-finality-grandpa = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sc-network = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sc-telemetry = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sc-transaction-pool = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }

sp-consensus = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sp-consensus-aura = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sp-core = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sp-runtime = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sp-timestamp = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }

substrate-prometheus-endpoint = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }

[features]
with-runtime-template = [
    "runtime-template",
]
