[package]
name = "duality-primitives"
version = '4.0.0-dev'
authors = ['Duality Blockchain Solutions LLC <https://github.com/dualitynetwork>']
edition = '2021'

[dependencies]

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15-1", default-features = false }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15-1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15-1", default-features = false }

[features]
default = [ "std" ]

std = [
	"sp-core/std",
	"sp-finality-grandpa/std",
	"sp-runtime/std",
]
