[package]
name = 'duality-rpc'
version = '4.0.0-dev'
authors = ['Duality Blockchain Solutions LLC <https://github.com/dualitynetwork>']
edition = '2021'
build = 'build.rs'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', version = '3.0.0' }

[dependencies]
jsonrpc-core = '18.0.0'
runtime-primitives = { path = "../../runtime/primitives", version = '4.0.0-dev' }

substrate-frame-rpc-system = { git ='https://github.com/paritytech/substrate.git', tag = 'devhub/latest', version = '4.0.0-dev' }
pallet-transaction-payment-rpc = { git ='https://github.com/paritytech/substrate.git', tag = 'devhub/latest', version = '4.0.0-dev' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest',  version = '4.0.0-dev' }
frame-system-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest',  version = '4.0.0-dev' }

sc-rpc = { git ='https://github.com/paritytech/substrate.git', tag = 'devhub/latest', version = '4.0.0-dev' }
sc-rpc-api = { git ='https://github.com/paritytech/substrate.git', tag = 'devhub/latest', version = '0.10.0-dev' }
sc-transaction-pool-api = { git ='https://github.com/paritytech/substrate.git', tag = 'devhub/latest', version = '4.0.0-dev' }

sp-api = { git ='https://github.com/paritytech/substrate.git', tag = 'devhub/latest', version = '4.0.0-dev' }
sp-block-builder = { git ='https://github.com/paritytech/substrate.git', tag = 'devhub/latest', version = '4.0.0-dev' }
sp-blockchain = { git ='https://github.com/paritytech/substrate.git', tag = 'devhub/latest', version = '4.0.0-dev' }
sp-consensus = { git ='https://github.com/paritytech/substrate.git', tag = 'devhub/latest', version = '0.10.0-dev' }
