[package]
name = 'duality-rpc'
version = '4.0.0-dev'
authors = ['Duality Blockchain Solutions LLC <https://github.com/dualitynetwork>']
edition = '2021'
build = 'build.rs'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }

[dependencies]
jsonrpc-core = '18.0.0'
duality-primitives = { path = "../../primitives", version = '4.0.0-dev' }

substrate-frame-rpc-system = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
pallet-transaction-payment-rpc = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
frame-system-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }

sc-rpc = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sc-rpc-api = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sc-transaction-pool-api = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }

sp-api = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sp-block-builder = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sp-blockchain = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
