[package]
name = 'duality-service'
version = '4.0.0-dev'
authors = ['Duality Blockchain Solutions LLC <https://github.com/dualitynetwork>']
edition = '2021'
build = 'build.rs'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
cfg_aliases = "0.1.1"
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }

[dependencies]
duality-rpc = { path = '../rpc', version = '4.0.0-dev' }
duality-executive = { path = '../../executive', version = '4.0.0-dev' }
duality-primitives = { path = "../../primitives", version = '4.0.0-dev' }

pallet-transaction-payment-rpc = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
frame-system-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }

template-runtime = { path = '../../runtime/template', version = '4.0.0-dev', optional = true }

sc-client-api = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sc-consensus = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sc-executor = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1", features = ['wasmtime'] }
sc-finality-grandpa = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sc-keystore = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sc-network = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sc-service = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1", features = ['wasmtime'] }
sc-telemetry = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sc-transaction-pool = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }

sp-api = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sp-block-builder = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sp-blockchain = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sp-consensus = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sp-finality-grandpa = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sp-offchain = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sp-runtime = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sp-session = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sp-storage = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sp-transaction-pool = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
sp-trie = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }

substrate-frame-rpc-system = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }
substrate-prometheus-endpoint = { git ='https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }

[features]
default = []
runtime-benchmarks = [
    "template-runtime/runtime-benchmarks"
]
with-template-runtime = [
    "duality-executive/with-template-runtime",
    "template-runtime",
]
