[package]
name = "runtime-primitives"
version = '4.0.0-dev'
authors = ['Duality Blockchain Solutions LLC <https://github.com/dualitynetwork>']
edition = '2021'

[dependencies]

codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15-1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15-1", default-features = false }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15-1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15-1", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

[features]
default = [ "std" ]

std = [
    'codec/std',
	"sp-core/std",
	"sp-finality-grandpa/std",
	"sp-runtime/std",
	"sp-std/std",
	"scale-info/std",
]