[package]
name = 'runtime-sparrow'
version = '4.0.0-dev'
description = 'A fresh FRAME-based Substrate runtime, ready for hacking.'
authors = ['Duality Blockchain Solutions LLC <https://github.com/dualitynetwork>']
edition = '2021'
publish = false
repository = 'https://github.com/dualitynetwork/duality-node/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.15-1" }

[features]
default = ['std']
with-runtime-sparrow = []
